<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backyellow"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.quiztrip.quiztrip.Pergunta7">

    <TextView
        android:id="@+id/cabeçalho"
        android:layout_width="371dp"
        android:layout_height="41dp"
        android:background="@color/azulEscuro2"
        android:text="@string/cabecalho"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/per7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/p7"
        android:textColor="@color/azulEscuro1" />

    <Button
        android:id="@+id/bt_p7a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p7a"
        android:textColor="?attr/actionMenuTextColor"
        android:onClick="proxima8"
        android:background="@drawable/botao_clicavel"/>

    <Button
        android:id="@+id/bt_p7b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p7b"
        android:onClick="proxima8"
        android:background="@drawable/botao_clicavel"/>

    <Button
        android:id="@+id/bt_p7c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p7c"
        android:onClick="proxima8"
        android:background="@drawable/botao_clicavel"/>

    <Button
        android:id="@+id/bt_p7d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p7d"
        android:onClick="proxima8"
        android:background="@drawable/botao_clicavel"/>

</LinearLayout>
