<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.quiztrip.quiztrip.Pergunta5">

    <TextView
        android:id="@+id/cabeçalho"
        android:layout_width="371dp"
        android:layout_height="41dp"
        android:background="@color/colorPrimaryDark"
        android:text="Qual o destino de intercâmbio ideal pra você ? "
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/per5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/p5"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/bt_p5a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p5a"
        android:textColor="?attr/actionMenuTextColor"
        android:onClick="proxima6"/>

    <Button
        android:id="@+id/bt_p5b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p5b"
        android:onClick="proxima6"/>

    <Button
        android:id="@+id/bt_p5c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p5c"
        android:onClick="proxima6"/>

    <Button
        android:id="@+id/bt_p5d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p5d"
        android:onClick="proxima6"/>

</LinearLayout>
